--- a/index.html
+++ b/index.html
@@ -9,6 +9,102 @@
 </head>
 
 <body>
+    <!-- ===================== HEADER start =================== -->
+    <header class="header">
+        <div class="container">
+            <nav>
+                <ul class="header__topbar">
+                    <li><a>About us</a></li>
+                    <li><a>Reservation</a></li>
+                    <li><a>Gallery</a></li>
+                </ul>
+                <div class="header__logo"><a href="#"></a></div>
+                <ul class="header__topbar">
+                    <li><a>Blog</a></li>
+                    <li><a>Elements</a></li>
+                    <li><a>Shop</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- ==================== HEADER end ======================= -->
+
+
+
+    <!-- =============== MAIN CONTENT start ================ -->
+    <main class="main-content">
+        <section class="main-banner">
+            <div class="container">
+                <div class="main-banner__form">
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- =============== MAIN CONTENT end ================ -->
+
+
+
+
+    <!-- ================== FOOTER start ===================== -->
+    <footer class="footer">
+
+        <div class="footer__top">
+            <div class="container">
+
+                <div class="footer__top-info">
+                    <div class="footer__top-column">
+                        <div class="footer__column-title">
+                            About
+                        </div>
+                        <div class="footer__column-content footer__column-content__left">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad m inim veniam, quis nostrud exercitation toui ullamcomi
+                            laboris nisi ut aliquip ex ea commodo consequat.
+                        </div>
+                    </div>
+
+                    <div class="footer__top-column">
+                        <div class="footer__column-title">Contact us</div>
+                        <div class="footer__column-content footer__column-content__right">
+                            <div class="info-point info-point__address">
+                                <address>
+                                    5419 Joseph Mountains <br>
+                                    Apt. 716
+                                </address>
+                            </div>
+                            <div class="info-point info-point__email">joga.info@example.com</div>
+                            <div class="info-point info-point__phone">
+                                <div>+1 234 567 89</div>
+                                <div>+1 234 678 90</div>
+                            </div>
+                            <div class="info-point info-point__url">www.example.com</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer__top-social">
+                    <ul class="footer__social-list">
+                        <li><a href="#"><img src="./img/icons/pinterest-outlined-logo.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/icons/twitter-social-outlined-logo.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/icons/facebook-logo-outline.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/icons/google-plus-outlined-logo-social-symbol.png" alt=""></a>
+                        </li>
+                        <li><a href="#"><img src="./img/icons/instagram-social-outlined-logo.png" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <div class="container">
+                <div class="footer__bottom-copyright">
+                    Copyright © 2016-2017 Yoga classes
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- =================== FOOTER end ======================== -->
 
     <script src="./libs/jquery-3.4.1.min.js"></script>
     <script src="./js/main.js"></script>
