header desktop markup

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <header class="header">
         <div class="container">
             <nav>
-                <ul class="header__topbar">
-                    <li><a>About us</a></li>
-                    <li><a>Reservation</a></li>
-                    <li><a>Gallery</a></li>
+                <ul class="header__topbar header__topbar-left">
+                    <li class="active"><a href="#">About us</a></li>
+                    <li><a href="#">Reservation</a></li>
+                    <li><a href="#">Gallery</a></li>
                 </ul>
-                <div class="header__logo"><a href="#"></a></div>
-                <ul class="header__topbar">
-                    <li><a>Blog</a></li>
-                    <li><a>Elements</a></li>
-                    <li><a>Shop</a></li>
+                <div class="header__logo"><a href="#"><img src="./img/icons/logo.png" alt="logo"></a></div>
+                <ul class="header__topbar header__topbar-right">
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Elements</a></li>
+                    <li><a href="#">Shop</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,12 +86,22 @@
 
                 <div class="footer__top-social">
                     <ul class="footer__social-list">
-                        <li><a href="#"><img src="./img/icons/pinterest-outlined-logo.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/icons/twitter-social-outlined-logo.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/icons/facebook-logo-outline.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/icons/google-plus-outlined-logo-social-symbol.png" alt=""></a>
+                        <li>
+                            <a href="#"><img src="./img/icons/pinterest-outlined-logo.png" alt="pinterest"></a>
                         </li>
-                        <li><a href="#"><img src="./img/icons/instagram-social-outlined-logo.png" alt=""></a></li>
+                        <li>
+                            <a href="#"><img src="./img/icons/twitter-social-outlined-logo.png" alt="twitter"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/icons/facebook-logo-outline.png" alt="facebook"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/icons/google-plus-outlined-logo-social-symbol.png"
+                                    alt="/google"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/icons/instagram-social-outlined-logo.png" alt="instagram"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
