--- a/index.html
+++ b/index.html
@@ -40,6 +40,58 @@
                 </div>
             </div>
         </section>
+
+        <section class="gallery">
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery1.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery2.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery3.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery4.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery5.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery6.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery7.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="#" class="gallery-link">
+                    <img src="./img/gallery8.png" alt="yoga">
+                    <span class="gallery-link__overlay"></span>
+                </a>
+            </div>
+
+        </section>
     </main>
     <!-- =============== MAIN CONTENT end ================ -->
 
