advantages desktop markup

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <!-- =============== MAIN CONTENT start ================ -->
     <main class="main-content">
+
+        <!-- main banner -->
         <section class="main-banner">
             <div class="container">
                 <div class="main-banner__form">
@@ -41,6 +43,7 @@
             </div>
         </section>
 
+        <!-- gallery -->
         <section class="gallery">
             <div class="gallery-item">
                 <a href="#" class="gallery-link">
@@ -92,6 +95,128 @@
             </div>
 
         </section>
+
+        <!-- advantages -->
+        <section class="advantages">
+            <div class="container">
+                <div class="advantages__list">
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage1.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            IMPROVED OVERALL
+                            HEALTH
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage2.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            INCREASED CONCENTRATION
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage3.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            BLANCE <br> YOUR MIND
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage4.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            SLEEP <br> BETTER
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage5.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            WEIGHT LOSS
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage6.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            STRENGTHENS <br> YOUR BONES
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage7.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            INCREASED FLEXIBILITY
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+
+                    <div class="advantages__item">
+                        <div class="icon">
+                            <img src="./img/advantages/advantage8.png" alt="advantage">
+                        </div>
+                        <div class="title">
+                            LOWER BLOOD PRESSURE
+                        </div>
+                        <div class="description">
+                            Enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea
+                            com.
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- =============== MAIN CONTENT end ================ -->
 
