program desktop markup

--- a/index.html
+++ b/index.html
@@ -43,6 +43,104 @@
             </div>
         </section>
 
+
+        <!-- program -->
+        <section class="program">
+            <div class="container">
+                <div class="section-title">
+                    YOGA FEATURE PROGRAM
+                </div>
+                <div class="section-subtitle">
+                    Our Classes
+                </div>
+
+                <div class="program__list">
+
+                    <div class="program__item">
+                        <div class="wraper">
+
+                            <figure class="program-img">
+                                <img src="./img/program1.png" alt="yoga">
+                            </figure>
+
+                            <div class="program-info">
+                                <div class="title">Yoga For Health</div>
+                                <div class="description">
+                                    Minim veniam, quis nostrud exercitation ullamco
+                                    laboris nisi ut aliquip ex ea commodo consequat consectetur
+                                    adipisicing elit, sed do eiusmod tempor incididunt.
+                                </div>
+                                <div class="couch">Ashtanga - Hatha</div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="program__item">
+                        <div class="wraper">
+
+                            <figure class="program-img">
+                                <img src="./img/program2.png" alt="yoga">
+                            </figure>
+
+                            <div class="program-info">
+                                <div class="title">Yoga For Lose Weight</div>
+                                <div class="description">
+                                    Minim veniam, quis nostrud exercitation ullamco
+                                    laboris nisi ut aliquip ex ea commodo consequat consectetur
+                                    adipisicing elit, sed do eiusmod tempor incididunt.
+                                </div>
+                                <div class="couch">Ashtanga - Hatha</div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="program__item">
+                        <div class="wraper">
+
+                            <figure class="program-img">
+                                <img src="./img/program3.png" alt="yoga">
+                            </figure>
+
+                            <div class="program-info">
+                                <div class="title">Yoga For Children</div>
+                                <div class="description">
+                                    Minim veniam, quis nostrud exercitation ullamco
+                                    laboris nisi ut aliquip ex ea commodo consequat consectetur
+                                    adipisicing elit, sed do eiusmod tempor incididunt.
+                                </div>
+                                <div class="couch">Ashtanga - Hatha</div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="program__item">
+                        <div class="wraper">
+
+                            <figure class="program-img">
+                                <img src="./img/program4.png" alt="yoga">
+                            </figure>
+
+                            <div class="program-info">
+                                <div class="title">Yoga For Elderly</div>
+                                <div class="description">
+                                    Minim veniam, quis nostrud exercitation ullamco
+                                    laboris nisi ut aliquip ex ea commodo consequat consectetur
+                                    adipisicing elit, sed do eiusmod tempor incididunt.
+                                </div>
+                                <div class="couch">Ashtanga - Hatha</div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+
         <!-- gallery -->
         <section class="gallery">
             <div class="gallery-item">
