main-banner desktop markup

--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@
 
         <!-- main banner -->
         <section class="main-banner">
-            <div class="container">
-                <div class="main-banner__form">
+            <div class="container main-banner__container">
+                <div class="main-banner__column">
+                    <div class="main-banner__form">
+                        <div class="title">Trial Class</div>
+                        <form action="">
+                            <input type="text" placeholder="Enter your name">
+                            <input type="text" placeholder="Enter your phone">
+                            <select name="" id="">
+                                <option value="0">Chose your class</option>
+                                <option value="1">FOR LOSE WEIGHT</option>
+                                <option value="2">FOR CHILDREN</option>
+                                <option value="3">FOR ELDERLY</option>
+                            </select>
+                            <button class="form-btn" type="submit">Try it</button>
+                        </form>
+                    </div>
+                </div>
 
+                <div class="main-banner__column">
+                    <div class="banner-title">Just Balance <br>
+                        your Mind & Body </div>
+                    <div class="banner-subtitle">Create the healthy living <br>
+                        for yourself</div>
                 </div>
             </div>
         </section>
@@ -47,9 +67,11 @@
         <!-- program -->
         <section class="program">
             <div class="container">
-                <div class="section-title">
+
+                <h1>
                     YOGA FEATURE PROGRAM
-                </div>
+                </h1>
+
                 <div class="section-subtitle">
                     Our Classes
                 </div>
@@ -345,16 +367,22 @@
                         <div class="footer__column-content footer__column-content__right">
                             <div class="info-point info-point__address">
                                 <address>
-                                    5419 Joseph Mountains <br>
-                                    Apt. 716
+                                    <a href="https://www.google.com.ua/maps/">
+                                        5419 Joseph Mountains <br>
+                                        Apt. 716
+                                    </a>
                                 </address>
                             </div>
-                            <div class="info-point info-point__email">joga.info@example.com</div>
-                            <div class="info-point info-point__phone">
-                                <div>+1 234 567 89</div>
-                                <div>+1 234 678 90</div>
+                            <div class="info-point info-point__email">
+                                <a href="mailto:joga.info@example.com">joga.info@example.com</a>
                             </div>
-                            <div class="info-point info-point__url">www.example.com</div>
+                            <div class="info-point info-point__phone">
+                                <div><a href="tel:+123456789">+1 234 567 89</a></div>
+                                <div><a href="tel:+123467890">+1 234 678 90</a></div>
+                            </div>
+                            <div class="info-point info-point__url">
+                                <a href="https://www.example.com">www.example.com</a>
+                            </div>
                         </div>
                     </div>
                 </div>
