about desktop markup

--- a/index.html
+++ b/index.html
@@ -216,6 +216,42 @@
 
         </section>
 
+
+        <!-- About -->
+        <section class="about-us">
+            <div class="container">
+                <div class="about-slider">
+
+                    <div class="about-column text-column">
+
+                        <div class="about-title">About us</div>
+
+                        <div class="about-description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                            dolor it in lorei voluptate velit esse cillum dolore eu fugiat
+                            nulla pariatur lorem ispum loting sokui.
+                        </div>
+
+                    </div>
+
+                    <div class="about-column img-column">
+
+                        <div class="prev-btn"></div>
+
+                        <div class="img-wrap">
+                            <img src="./img/about-slider.png" alt="">
+                        </div>
+
+                        <div class="next-btn"></div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- advantages -->
         <section class="advantages">
             <div class="container">
