offers desktop markup

--- a/index.html
+++ b/index.html
@@ -373,6 +373,90 @@
             </div>
         </section>
 
+
+        <!-- Shop -->
+        <section class="shop">
+            <div class="container">
+
+                <div class="offers">
+
+                    <div class="offer-item">
+                        <header class="offer-header">
+                            <span class="dollar">
+                                $
+                            </span>
+                            <span class="price">
+                                49
+                            </span>
+                            <span class="permonth">
+                                /month
+                            </span>
+                        </header>
+                        <div class="offer-info">
+
+                            <div class="date">ENTRY DATE: MON – FRI</div>
+                            <div class="time">ENTRY TIME: 8A.M – 8P.M</div>
+                            <div class="advicer">NUTRITION ADVICER: NO</div>
+
+                            <button>Buy now</button>
+                        </div>
+                    </div>
+
+
+                    <div class="offer-item">
+                        <header class="offer-header">
+                            <span class="dollar">
+                                $
+                            </span>
+                            <span class="price">
+                                69
+                            </span>
+                            <span class="permonth">
+                                /month
+                            </span>
+                        </header>
+                        <div class="offer-info">
+
+                            <div class="date">ENTRY DATE: MON – FRI</div>
+                            <div class="time">ENTRY TIME: 8A.M – 8P.M</div>
+                            <div class="advicer">NUTRITION ADVICER: NO</div>
+
+                            <button>Buy now</button>
+                        </div>
+                    </div>
+
+
+                    <div class="offer-item">
+                        <header class="offer-header">
+                            <span class="dollar">
+                                $
+                            </span>
+                            <span class="price">
+                                99
+                            </span>
+                            <span class="permonth">
+                                /month
+                            </span>
+                        </header>
+                        <div class="offer-info">
+
+                            <div class="date">ENTRY DATE: MON – FRI</div>
+                            <div class="time">ENTRY TIME: 8A.M – 8P.M</div>
+                            <div class="advicer">NUTRITION ADVICER: NO</div>
+
+                            <button>Buy now</button>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="reviews">
+
+                </div>
+
+            </div>
+        </section>
+
     </main>
     <!-- =============== MAIN CONTENT end ================ -->
 
