shop section markup

--- a/index.html
+++ b/index.html
@@ -451,7 +451,56 @@
                 </div>
 
                 <div class="reviews">
+                    <div class="photo-column">
+                        <div class="img-wrap">
+                            <img src="./img/avatar.png" alt="avatar">
+                        </div>
+                    </div>
+                    <div class="review-column">
+                        <div class="review-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat.
+                        </div>
 
+                        <div class="review-person">
+                            <div class="position">Trainer</div>
+                            <div class="name">Laura Shepard</div>
+                        </div>
+
+                        <div class="review-slider">
+                            <div class="slider-wrap">
+
+                                <div class="prev-btn"></div>
+
+                                <div class="slider-author">
+                                    <div class="img-wrap">
+                                        <img src="./img/review-photo.png" alt="">
+                                    </div>
+                                    <div class="text-wrap">
+                                        <div class="name">Sara Taylor</div>
+                                        <div class="position">trainer</div>
+                                    </div>
+
+                                </div>
+
+
+
+                                <div class="next-btn"></div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider-dots">
+                        <ul>
+                            <li></li>
+                            <li class="active"></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
