--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
         <div class="container">
             <nav>
                 <ul class="header__topbar header__topbar-left">
-                    <li class="active"><a href="#">About us</a></li>
-                    <li><a href="#">Reservation</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li class="active"><a class="scroll-down" href=".main-banner">About us</a></li>
+                    <li><a class="scroll-down" href=".program">Reservation</a></li>
+                    <li><a class="scroll-down" href=".gallery">Gallery</a></li>
                 </ul>
-                <div class="header__logo"><a href="#"><img src="./img/icons/logo.png" alt="logo"></a></div>
+                <div class="header__logo"><a class="scroll-down" href="body"><img src="./img/icons/logo.png"
+                            alt="logo"></a></div>
                 <ul class="header__topbar header__topbar-right">
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Elements</a></li>
-                    <li><a href="#">Shop</a></li>
+                    <li><a class="scroll-down" href=".about-us">Blog</a></li>
+                    <li><a class="scroll-down" href=".advantages">Elements</a></li>
+                    <li><a class="scroll-down" href=".shop">Shop</a></li>
                 </ul>
             </nav>
         </div>
