responsive styles start

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                             <div class="time">ENTRY TIME: 8A.M – 8P.M</div>
                             <div class="advicer">NUTRITION ADVICER: NO</div>
 
-                            <button>Buy now</button>
+                            <button class="offer-btn">Buy now</button>
                         </div>
                     </div>
 
@@ -424,7 +424,7 @@
                             <div class="time">ENTRY TIME: 8A.M – 8P.M</div>
                             <div class="advicer">NUTRITION ADVICER: NO</div>
 
-                            <button>Buy now</button>
+                            <button class="offer-btn">Buy now</button>
                         </div>
                     </div>
 
@@ -447,7 +447,7 @@
                             <div class="time">ENTRY TIME: 8A.M – 8P.M</div>
                             <div class="advicer">NUTRITION ADVICER: NO</div>
 
-                            <button>Buy now</button>
+                            <button class="offer-btn">Buy now</button>
                         </div>
                     </div>
 
